tinyc/test/bad/void-as-bool-if.c
void v() {}

int main()
{
    if ( v() )
        ;
    return 0;
}
